--- a/src/components/Tours/Tours.css
+++ b/src/components/Tours/Tours.css
@@ -1,12 +1,10 @@
-img {
-    width: 95%;
-    height: 95%;
+.card-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#Tours-Container
-{
-    display: flex;
-    width: 30%;
-    flex-direction: column;
-    justify-content: center;
+.tours-data{
+    text-align: center;
+    color: white;
 }
