--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,20 +1,12 @@
-p {
+.footer {
+    width: 100%;
+    height: 50px;
     display: flex;
-    color: rgb(0, 0, 0);
-    justify-content: center;
-}
-.footer-flex {
-    display: flex;
-    width: 80%;
-    margin:0%;
-    padding: 0%;
-    justify-content: space-between;
     align-items: center;
-    color: rgb(0, 0, 0);
+    justify-content: space-around;
+    background-color: rosybrown;
 }
-.footer-flex a{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: rgb(0, 0, 0);
+
+.footer p {
+    margin: 0;
 }
